; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-tape.c_idetape_create_rewind_cmd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-tape.c_idetape_create_rewind_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ide_atapi_pc = type { i32, i32* }

@REZERO_UNIT = common dso_local global i32 0, align 4
@PC_FLAG_WAIT_FOR_DSC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.ide_atapi_pc*)* @idetape_create_rewind_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @idetape_create_rewind_cmd(i32* %0, %struct.ide_atapi_pc* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.ide_atapi_pc*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.ide_atapi_pc* %1, %struct.ide_atapi_pc** %4, align 8
  %5 = load %struct.ide_atapi_pc*, %struct.ide_atapi_pc** %4, align 8
  %6 = call i32 @ide_init_pc(%struct.ide_atapi_pc* %5)
  %7 = load i32, i32* @REZERO_UNIT, align 4
  %8 = load %struct.ide_atapi_pc*, %struct.ide_atapi_pc** %4, align 8
  %9 = getelementptr inbounds %struct.ide_atapi_pc, %struct.ide_atapi_pc* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 %7, i32* %11, align 4
  %12 = load i32, i32* @PC_FLAG_WAIT_FOR_DSC, align 4
  %13 = load %struct.ide_atapi_pc*, %struct.ide_atapi_pc** %4, align 8
  %14 = getelementptr inbounds %struct.ide_atapi_pc, %struct.ide_atapi_pc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = or i32 %15, %12
  store i32 %16, i32* %14, align 8
  ret void
}

declare dso_local i32 @ide_init_pc(%struct.ide_atapi_pc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
